# ManageT

./: .gitignore  AGENTS.md  GROUPS_REVIEW.md  HARDENING.md  PROJECT_REVIEW.md  README.md  drizzle.config.ts  managet-debug-agent.json  next.config.ts  package-lock.json  package.json  server.ts  tailwind.config.ts  tsconfig.json
agent/: Cargo.toml  README.md
agent/scripts/: build-release.sh
agent/src/: cli.rs  cli_dashboard.rs  collector.rs  config.rs  hwmon.rs  lib.rs  main.rs  reporter.rs
agent/src/installer/: mod.rs  paths.rs  tui.rs
agent/src/service/: control.rs  launchd.rs  mod.rs  systemd.rs
agent/src/sessions/: bar.rs  client.rs  manager.rs  mod.rs  protocol.rs  server.rs
deploy/: install-systemd.sh  managet.service  managet.user.service
drizzle/: 0000_hard_big_bertha.sql  0000_nappy_thaddeus_ross.sql  0001_wild_shooting_star.sql  0002_awesome_jackpot.sql  0003_yielding_queen_noir.sql  0004_regular_namorita.sql  0005_calm_invaders.sql  0006_user_preferences.sql  0007_groups.sql  0008_server_agent_config.sql  0009_server_api_url.sql  0010_server_bar_settings.sql  0011_metric_temps_fans.sql  0012_server_fan_control.sql  0013_group_view_server_label.sql  0014_rename_email_to_username.sql  0015_user_cli_tokens.sql  0016_mosaic_themes.sql  0017_stack_layouts.sql  0018_fk_indices.sql  0019_cli_token_expiry.sql  0020_host_key_fingerprint.sql  0021_palette_commands.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  _journal.json
infra/: README.md  managet.service
scripts/: _creds.ts  benchmark-memory-storage.py  build-and-deploy-cli.sh  check-agent-log.ts  cleanup-orphan-sessions.ts  cleanup-roundtrip.ts  clear-stale-error.ts  deploy-agent-mac-build.ts  deploy-agent-pi-quick.ts  deploy-agent.ts  deploy-cli-mac.ts  deploy-cli.ts  deploy-to-mini.ts  dev-add-servers.ts  dev-retry-mac.ts  dev-ssh.ts  diagnose-agent.ts  finish-agent-reconfig.ts  fix-auth-trust-host.ts  fix-pi-unit-and-retest.ts  full-terminal-test.ts  groups-smoke.ts  inspect-agent-cfg.ts  inspect-excalidraw.ts  inspect-pi-runtime.ts  inspect-terminal-issue.ts  inventory-pi.ts  journal-tail.ts  log-grep.ts  log-tail.ts  migrate-pi-resume.ts  migrate-to-pi.ts  multiselect-smoke.ts  probe-kill.ts  probe-mac.ts  probe-network.ts  probe-pi.ts  probe-tunnels.ts  promote-to-prod.ts  reconcile-all.ts  (+17 more)
src/app/: globals.css  layout.tsx
src/app/login/: page.tsx
src/components/: SidebarLayout.tsx
src/components/dashboard/: AlertBadge.tsx  MetricSparkline.tsx  ServerCard.tsx
src/components/server/: AgentStatusBadge.tsx  FanControlWidget.tsx  InstallProgressPanel.tsx
src/components/settings/: AppearanceTab.tsx  DashboardTab.tsx  MosaicThemePreview.tsx  MosaicThemesTab.tsx  ServersTab.tsx
src/components/terminal/: CommandPalette.tsx  CommandRunner.tsx  GroupMenu.tsx  ImageUploadButton.tsx  RecoveryBanner.tsx  TerminalPane.tsx  TerminalPaneInner.tsx
src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Modal.tsx  Select.tsx  Table.tsx  Tabs.tsx  Toast.tsx  index.ts
src/lib/: palette.ts
src/lib/agent/: auth.ts  installer.ts  reconfigure.ts  source-bundle.ts  status-monitor.ts  targets.ts  token.ts  uninstaller.ts
src/lib/auth/: guard.ts  index.ts
src/lib/cli-auth/: index.ts  token.ts
src/lib/crypto/: index.ts
src/types/: index.ts
tests-e2e/: terminal-smoke.mjs
(+108 files in other folders)
