[package]
name = "managet-agent"
version = "0.2.4"
edition = "2021"
description = "ManageT monitoring agent — reports resource usage and heartbeat to a ManageT dashboard"
license = "MIT"

# Library crate so both binaries can share the session client, config,
# installer, etc. without duplicating the modules.
[lib]
name = "managet_agent"
path = "src/lib.rs"

# Long-running service binary + install/uninstall/status driver.
[[bin]]
name = "managet-agent"
path = "src/main.rs"

# Thin user-facing CLI — lists/creates/attaches/kills sessions through
# the locally running agent's Unix socket. Drop-in tmux-style UX.
[[bin]]
name = "managet"
path = "src/bin/managet.rs"

[dependencies]
anyhow = "1.0"
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
hostname = "0.4"
inquire = "0.7"
libc = "0.2"
nix = { version = "0.29", features = ["term", "ioctl", "user", "signal"] }
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
thiserror = "2.0"
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros", "time", "signal", "io-std", "io-util", "net"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
